Bug 695080: fix typo in the pngmono device declaration

which caused pngmono to threshold rather than halftone at or above 150 dpi.

No cluster differences.