gs/devices/gdevpng.c
@@ -95,7 +95,7 @@ const gx_device_png gs_pngmono_device =
            DEFAULT_WIDTH_10THS, DEFAULT_HEIGHT_10THS,
            X_DPI, Y_DPI,
            0, 0, 0, 0,		/* margins */
-           3, 4, 1, 1, 2, 2, png_print_page),
+           1, 1, 1, 1, 2, 2, png_print_page),
     1, /* downscale_factor */
     0  /* min_feature_size */
 };
